# crypto_market_data_aggregator

./: .gitignore  AGENTS.md  Dockerfile  TODO.md  docker-compose.yaml  mise.toml  pyproject.toml
src/: __init__.py  collector.py  config.py  database.py  main.py  parquet_storage.py
tests/: __init__.py  conftest.py  test_api.py  test_date_validation.py  test_monthly_parquet_storage.py  test_parquet_storage.py  test_r2_upload.py  test_validation.py
