[project]
name = "crypto-market-data-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "responses>=0.24.0",
]
dev = [
    "ruff>=0.3.0",
]
